--- a/styles.css
+++ b/styles.css
@@ -657,6 +657,7 @@ td i {
 }
 .moneyapp h1 {
   color: #40196d;
+  font-weight: 900;
 }
 .moneyapp button {
   background-color: #40196d;
@@ -1367,8 +1368,10 @@ th {
   }
 
   .three-card-heading {
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 900;
+    /* text-align: left; */
+    justify-content: left;
   }
 
   .joinkuda {
@@ -1393,6 +1396,15 @@ th {
   }
 
   .partners h2 {
+    font-size: 24px;
+  }
+
+  .marquee {
+    box-shadow: none;
+    border: none;
+  }
+
+  .marquee-header h2 {
     font-size: 24px;
   }
 }
