--- a/styles.css
+++ b/styles.css
@@ -1175,7 +1175,7 @@ th {
   .fifth h1,
   .seventh h1 {
     font-size: 28px;
-    font-weight: bolder;
+    font-weight: 900;
     margin-top: 0;
   }
   .thirdpage span br,
@@ -1199,7 +1199,7 @@ th {
   .sixth h1,
   .eighth h1 {
     font-size: 28px;
-    font-weight: bolder;
+    font-weight: 900;
     margin-top: 0;
   }
   .fourthpage span br,
@@ -1416,6 +1416,7 @@ th {
 
   .partners h2 {
     font-size: 24px;
+    font-weight: 900;
   }
 
   .marquee {
