--- a/styles.css
+++ b/styles.css
@@ -1012,7 +1012,7 @@ th {
   }
 
   .navbar-brand {
-    margin-left: 30px;
+    margin-left: 15px;
   }
   .navbar-menu,
   .navbar-actions {
@@ -1024,6 +1024,11 @@ th {
     align-items: center;
     justify-content: center;
     gap: 10px;
+    margin-right: 10px;
+  }
+
+  .company-logo img {
+    margin-left: -20px;
   }
   .dropdown-content.show #backButton {
     display: block;
@@ -1357,11 +1362,6 @@ th {
   }
   .kuda-contitions {
     font-size: 12px;
-  }
-
-  .logocontainer {
-    /* margin-left: 15px; */
-    margin-top: -180px;
   }
 }
 
